fixed css overlap issue

--- a/CSS/hackathon.css
+++ b/CSS/hackathon.css
@@ -159,117 +159,7 @@ height:auto;
   .category-tech{
     background: var(--tech-color);
   }
-  .btn{
-    display: inline-block;
-    border: none;
-    background: var(--dark-color);
-    color: #fff;
-    padding: 0.5rem 1.5rem;
-    transition: 400ms;
-    border-radius: 4px;
-  
-  }
-  .btn-light{
-    background: var(--light-color);
-    color: var(--dark-color);
-  }
-  .btn-primary{
-      background: transparent;
-  border: 1px solid var(--primary-color);
-  
-  }
-  .btn-secondary{
-    background: var(--secondary-color);
-  }
-  .btn:hover{
-    background: #98fb98;
-    color: #001e57;
-  
-      -webkit-box-shadow: 14px 7px 50px 9px rgba(39,255,234,0.28); 
-  box-shadow: 14px 7px 50px 9px rgba(39,255,234,0.28);
-  }
-  .btn-primary:hover {
-      background-color: rgba(252, 173, 3, 0.2);
-      color: white;
-      transition: 300ms;
-      border: 1px solid var(--primary-color);
-   
-  }
-  .btn-block{
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
-  .btn-dark {
-      background: #1c2b75;
-      color:white;
-  }
-  .btn-dark:hover {
-      color: #1c2b75;
-      background-color:white;
-  }
-  .card{
-    background: #ffffff;
-    padding: .7rem;
-    text-align: center;
-    border-radius: 8px;
-  }
-  
-  .bg-dark{
-    background: var(--dark-color);
-    color: #fff;
-  }
-  .bg-primary{
-    background: var(--primary-color);
-    color: #fff;
-  }
-  .bg-secondary{
-    background: var(--secondary-color);
-    color: #fff;
-  }
-  .bg-custom-123 {
-      background: #3d6a89 !important;
-      color: white !important;
-  }
-  .bg-custom-123 a {
-      color:white; !important;
-  }
-  .bg-dark h1,
-  .bg-dark h2,
-  .bg-dark h3,
-  .bg-dark a,
-  .bg-primary h1,
-  .bg-primary h2,
-  .bg-primary h3,
-  .bg-primary a,
-  .bg-secondary h1,
-  .bg-secondary h2,
-  .bg-secondary h3
-  .bg-secondary a{
-    color: #fff;
-  }
-  .py-1{
-    padding: 1.5rem 0;
-  }
-  .py-2{
-    padding: 1rem 0;
-  }
-  
-  .py-3{
-    padding: 3rem 0;
-  }
-  .p-1{
-    padding: 1.5rem;
-  }
-  .p-2{
-    padding: 2rem;
-  }
-  .p-3{
-    padding: 3rem;
-  }
-  
-  
-  
+ 
   .page-container{
     display: grid;
    /* grid-template-columns: 5fr 2fr;*/
